<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/containerMainTitleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/notebook"
            android:drawableRight="@drawable/notebook"
            android:fontFamily="@font/playfair_display"
            android:gravity="center"
            android:text="@string/mainTitle"
            android:textColor="@color/Blue"
            android:textSize="@dimen/textSiZeTitleTV"
            android:textStyle="bold"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerMainEditTextLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerMainTitleLL"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/editTextMainNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/oswald_extralight"
                android:hint="@string/editTextMainNameET"
                android:minHeight="@dimen/minHeight"
                android:textColor="@color/Blue"
                android:textColorHint="@color/black"
                android:textSize="@dimen/textSiZeET"
                android:textStyle="italic"></EditText>

            <EditText
                android:id="@+id/editTextSurnameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/oswald_extralight"
                android:hint="@string/editTextSurnameET"
                android:minHeight="@dimen/minHeight"
                android:textColor="@color/Blue"
                android:textColorHint="@color/black"
                android:textSize="@dimen/textSiZeET"
                android:textStyle="italic"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/editTextMainPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:maxLength="12"
                android:fontFamily="@font/oswald_extralight"
                android:gravity="center"
                android:hint="@string/editTextMainPhone"
                android:inputType="phone"
                android:textColor="@color/Blue"
                android:textColorHint="@color/black"
                android:textSize="@dimen/textSiZeET"
                android:textStyle="italic"></EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/editTextMainAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_extralight"
                android:gravity="top"
                android:hint="@string/editTextMainAddress"
                android:inputType="textPostalAddress|textAutoCorrect"
                android:textColor="@color/Blue"
                android:textColorHint="@color/black"
                android:textSize="@dimen/textSiZeET"
                android:textStyle="italic"></EditText>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerButtonMainLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/containerMainEditTextLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <Button
            android:id="@+id/buttonMainSaveBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSaveBT"
            android:textColor="@color/Blue"
            android:layout_weight="1"
            android:fontFamily="@font/playfair_display"
            android:textStyle="bold"
            android:backgroundTint="@color/Transparent"
            android:textSize="@dimen/textSiZeBT"></Button>

        <Button
            android:id="@+id/buttonMainClearBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonClearBT"
            android:textColor="@color/Blue"
            android:layout_weight="1"
            android:fontFamily="@font/playfair_display"
            android:textStyle="bold"
            android:backgroundTint="@color/Transparent"
            android:textSize="@dimen/textSiZeBT"></Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerListViewMainLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@id/containerButtonMainLL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <ListView
            android:id="@+id/listViewMainLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>